--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,6 @@
 
 body {
   font-family: "Nunito", sans-serif, "arial", sans-serif;
-  letter-spacing: 0.5px;
   color: #454545;
 }
 body section {
@@ -24,7 +23,7 @@ body section {
   align-items: center;
 }
 body .content {
-  margin: 80px 25px;
+  margin: 60px 25px;
 }
 body h1,
 body h2,
@@ -35,6 +34,7 @@ body h2 {
   margin-bottom: 55px;
   font-size: 2rem;
   text-align: center;
+  letter-spacing: 0.5px;
 }
 body p {
   text-align: justify;
@@ -44,8 +44,84 @@ body a {
 }
 @media screen and (min-width: 700px) {
   body .content {
-    margin: 90px auto;
+    margin: 80px auto;
     width: 800px;
+  }
+}
+
+.nav {
+  position: sticky;
+  width: 100%;
+  height: 60px;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  z-index: 99;
+  background-color: #ffffff;
+}
+.nav img {
+  width: 80px;
+  height: auto;
+}
+.nav .burger-btn {
+  font-size: 38px;
+  color: #454545;
+  cursor: pointer;
+}
+.nav .nav-items {
+  position: absolute;
+  right: 0px;
+  width: auto;
+  height: 100vh;
+  top: 60px;
+  background-color: #f7f7f7;
+  color: #454545;
+  flex-direction: column;
+  justify-content: flex-start;
+  font-size: 1.4rem;
+  display: none;
+  padding: 10px 20px;
+}
+.nav .nav-items.active {
+  display: block;
+}
+.nav .fa-user {
+  font-size: 2rem;
+}
+.nav .nav-item {
+  padding: 15px 0;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 700px) {
+  .nav {
+    height: auto;
+    padding: 6px 35px;
+  }
+  .nav img {
+    width: 140px;
+  }
+  .nav .fa-bars {
+    display: none;
+  }
+  .nav .nav-items {
+    position: inherit;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    gap: 25px;
+    background-color: inherit;
+  }
+  .nav .nav-items .nav-item {
+    font-size: 1.2rem;
+    padding: 0;
+  }
+  .nav .nav-items .nav-item:hover {
+    color: #d92332;
   }
 }
 
