--- a/src/sass/includes/_base.scss
+++ b/src/sass/includes/_base.scss
@@ -9,7 +9,7 @@
   scroll-behavior: smooth;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Tektur:wght@500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&display=swap");
 
 $red: #d92332;
@@ -22,6 +22,17 @@ $light: #f7f7f7;
 $border-radius: 5px;
 $padding-btn-mobile: 12px 15px;
 $padding-btn-desktop: 12px 30px;
+
+@mixin button {
+  width: fit-content;
+  margin: 0 auto;
+  padding: 12px 15px;
+  border-radius: 5px;
+  color: $white;
+  background-color: #d92332;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
 
 body {
   font-family: "Nunito", sans-serif, "arial", sans-serif;
@@ -42,7 +53,7 @@ body {
   h1,
   h2,
   h3 {
-    font-family: "Mukta", sans-serif, "Helvetica";
+    font-family: "Tektur", sans-serif, "Helvetica";
   }
 
   h2 {
