--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Tektur:wght@500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&display=swap");
 *,
 *::after,
@@ -28,7 +28,7 @@ body .content {
 body h1,
 body h2,
 body h3 {
-  font-family: "Mukta", sans-serif, "Helvetica";
+  font-family: "Tektur", sans-serif, "Helvetica";
 }
 body h2 {
   margin-bottom: 55px;
@@ -122,6 +122,72 @@ body a {
   }
   .nav .nav-items .nav-item:hover {
     color: #d92332;
+  }
+}
+.header {
+  height: 400px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid black;
+}
+.header .background-img {
+  position: absolute;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-image: url("./assets/header.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-y: center;
+  background-position-x: center;
+  filter: brightness(60%);
+  z-index: -1;
+}
+.header .header-content {
+  width: fit-content;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 30px;
+}
+.header .header-content h1 {
+  color: #ffffff;
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+.header .header-content .header-btns {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.header .header-content .header-btns .header-btn {
+  width: fit-content;
+  margin: 0 auto;
+  padding: 12px 15px;
+  border-radius: 5px;
+  color: #ffffff;
+  background-color: #d92332;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+.header .header-content .header-btns .header-btn:hover {
+  background-color: #d9777f;
+}
+
+@media screen and (min-width: 700px) {
+  .header {
+    height: 500px;
+  }
+  .header .header-content h1 {
+    font-size: 3.5rem;
   }
 }
 
