--- a/src/sass/includes/_base.scss
+++ b/src/sass/includes/_base.scss
@@ -10,7 +10,7 @@
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Tektur:wght@500;600;700;800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap");
 
 $red: #d92332;
 $red-light: #d9777f;
@@ -38,18 +38,6 @@ body {
   font-family: "Nunito", sans-serif, "arial", sans-serif;
   color: $gray;
 
-  section {
-    width: 100%;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .content {
-    margin: 60px 25px;
-  }
-
   h1,
   h2,
   h3 {
@@ -69,6 +57,28 @@ body {
 
   a {
     color: inherit;
+  }
+
+  section {
+    width: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .content {
+    margin: 60px 25px;
+
+    h3 {
+      margin-bottom: 55px;
+      font-size: 1.6rem;
+      text-align: center;
+      letter-spacing: 0.5px;
+      text-decoration-line: underline;
+      text-decoration-color: $red;
+      text-underline-offset: 5px;
+    }
   }
 
   @media screen and (min-width: 700px) {
