--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Tektur:wght@500;600;700;800&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap");
 *,
 *::after,
 *::before {
@@ -14,16 +14,6 @@
 body {
   font-family: "Nunito", sans-serif, "arial", sans-serif;
   color: #454545;
-}
-body section {
-  width: 100%;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-body .content {
-  margin: 60px 25px;
 }
 body h1,
 body h2,
@@ -41,6 +31,25 @@ body p {
 }
 body a {
   color: inherit;
+}
+body section {
+  width: 100%;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body .content {
+  margin: 60px 25px;
+}
+body .content h3 {
+  margin-bottom: 55px;
+  font-size: 1.6rem;
+  text-align: center;
+  letter-spacing: 0.5px;
+  text-decoration-line: underline;
+  text-decoration-color: #d92332;
+  text-underline-offset: 5px;
 }
 @media screen and (min-width: 700px) {
   body .content {
@@ -80,7 +89,6 @@ body a {
   color: #454545;
   flex-direction: column;
   justify-content: flex-start;
-  font-size: 1.2rem;
   display: none;
   padding: 10px 20px;
 }
@@ -93,6 +101,8 @@ body a {
 .nav .nav-item {
   padding: 15px 0;
   cursor: pointer;
+  text-transform: uppercase;
+  font-weight: 600;
 }
 
 @media screen and (min-width: 700px) {
@@ -113,11 +123,10 @@ body a {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    gap: 25px;
+    gap: 32px;
     background-color: inherit;
   }
   .nav .nav-items .nav-item {
-    font-size: 1.2rem;
     padding: 0;
   }
   .nav .nav-items .nav-item:hover {
