--- a/src/sass/includes/_base.scss
+++ b/src/sass/includes/_base.scss
@@ -20,8 +20,6 @@ $white: #ffffff;
 $light: #f7f7f7;
 
 $border-radius: 5px;
-$padding-btn-mobile: 12px 15px;
-$padding-btn-desktop: 12px 30px;
 
 @mixin button {
   width: fit-content;
@@ -32,6 +30,9 @@ $padding-btn-desktop: 12px 30px;
   background-color: #d92332;
   font-size: 1.1rem;
   cursor: pointer;
+  &:hover {
+    background-color: $red-light;
+  }
 }
 
 body {
@@ -70,7 +71,7 @@ body {
   .content {
     margin: 60px 25px;
 
-    h3 {
+    h2 {
       margin-bottom: 55px;
       font-size: 1.6rem;
       text-align: center;
