--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,5 @@
 @import "./includes/base";
 @import "./includes/navbar";
 @import "./includes/header";
+@import "./includes/services";
+@import "./includes/occasions";
