--- a/src/style.css
+++ b/src/style.css
@@ -42,7 +42,7 @@ body section {
 body .content {
   margin: 60px 25px;
 }
-body .content h3 {
+body .content h2 {
   margin-bottom: 55px;
   font-size: 1.6rem;
   text-align: center;
@@ -93,13 +93,13 @@ body .content h3 {
   padding: 10px 20px;
 }
 .nav .nav-items.active {
-  display: block;
+  display: flex;
 }
 .nav .fa-user {
   font-size: 2rem;
 }
 .nav .nav-item {
-  padding: 15px 0;
+  padding: 18px 0;
   cursor: pointer;
   text-transform: uppercase;
   font-weight: 600;
@@ -198,6 +198,55 @@ body .content h3 {
   .header .header-content h1 {
     font-size: 3.5rem;
   }
+}
+.services {
+  background-color: #f7f7f7;
+}
+.services .services-content .services-cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+}
+.services .services-content .services-cards .services-card {
+  width: 240px;
+  height: 230px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.6rem;
+  font-weight: 700;
+  border-radius: 5px;
+  border: 2px solid #454545;
+}
+@media screen and (min-width: 700px) {
+  .services .services-content .services-cards {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: inherit;
+  }
+}
+
+.occasions .occasions-content .occasions-text {
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 700px) {
+  .occasions .occasions-content .occasions-text {
+    text-align: center;
+  }
+}
+.occasions .occasions-content .occasions-btn {
+  width: fit-content;
+  margin: 0 auto;
+  padding: 12px 15px;
+  border-radius: 5px;
+  color: #ffffff;
+  background-color: #d92332;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+.occasions .occasions-content .occasions-btn:hover {
+  background-color: #d9777f;
 }
 
 /*# sourceMappingURL=style.css.map */
