--- a/src/sass/includes/_header.scss
+++ b/src/sass/includes/_header.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
+  background-color: inherit !important;
 
   .background-img {
     position: absolute;
