--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,3 +3,5 @@
 @import "./includes/header";
 @import "./includes/services";
 @import "./includes/occasions";
+@import "./includes/reviews";
+@import "./includes/contact";
