--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,9 @@
+/* Basics includes components */
 @import "./includes/base";
 @import "./includes/navbar";
+@import "./includes/footer";
+
+/* Index section includes components */
 @import "./includes/header";
 @import "./includes/services";
 @import "./includes/occasions";
