--- a/src/sass/includes/_contact.scss
+++ b/src/sass/includes/_contact.scss
@@ -66,7 +66,7 @@
           align-items: flex-start;
           flex: 1;
         }
-        .contact-map {
+        .contact-form {
           flex: 2;
           height: auto;
         }
