--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+/* Basics includes components */
 @import url("https://fonts.googleapis.com/css2?family=Tektur:wght@500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap");
 *,
@@ -136,6 +137,60 @@ body .content h2 {
     color: #d92332;
   }
 }
+footer {
+  background-color: #454545;
+  color: #ffffff;
+  padding: 30px 20px;
+}
+footer .footer-items {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  align-items: center;
+}
+footer .footer-items h3 {
+  font-weight: 500;
+}
+footer .footer-items .footer-infos {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+footer .footer-items .footer-infos .footer-copyright {
+  font-weight: 700;
+}
+footer .footer-items .footer-schedules {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+footer .footer-items .footer-contact {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+footer .footer-items .footer-contact .contact-infos {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+footer .footer-items .footer-contact .contact-infos .fas {
+  padding-right: 10px;
+  font-size: 1.2rem;
+}
+@media screen and (min-width: 700px) {
+  footer .footer-items {
+    flex-direction: row;
+    gap: 40px;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+}
+
+/* Index section includes components */
 .header {
   height: 400px;
   position: relative;
@@ -347,7 +402,7 @@ body .content h2 {
     align-items: flex-start;
     flex: 1;
   }
-  .contact .contact-content .contact-card .contact-map {
+  .contact .contact-content .contact-card .contact-form {
     flex: 2;
     height: auto;
   }
