--- a/src/sass/includes/_footer.scss
+++ b/src/sass/includes/_footer.scss
@@ -29,6 +29,12 @@ footer {
       flex-direction: column;
       gap: 10px;
       align-items: center;
+
+      .schedule {
+        display: flex;
+        justify-content: space-between;
+        gap: 5px;
+      }
     }
 
     .footer-contact {
