--- a/src/style.css
+++ b/src/style.css
@@ -166,6 +166,11 @@ footer .footer-items .footer-schedules {
   gap: 10px;
   align-items: center;
 }
+footer .footer-items .footer-schedules .schedule {
+  display: flex;
+  justify-content: space-between;
+  gap: 5px;
+}
 footer .footer-items .footer-contact {
   display: flex;
   flex-direction: column;
