Login page + Login action created

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,3 +9,6 @@
 @import "./includes/occasions";
 @import "./includes/reviews";
 @import "./includes/contact";
+
+/* Other pages */
+@import "./includes/login";
