--- a/src/sass/includes/_base.scss
+++ b/src/sass/includes/_base.scss
@@ -17,7 +17,7 @@ $red-light: #d9777f;
 $gray: #454545;
 $bg-color: #fafafa;
 $white: #ffffff;
-$light: #f7f7f7;
+$light: #ececec;
 
 $border-radius: 5px;
 
@@ -26,6 +26,7 @@ $border-radius: 5px;
   margin: 0 auto;
   padding: 12px 15px;
   border-radius: 5px;
+  border: none;
   color: $white;
   background-color: #d92332;
   font-size: 1.1rem;
@@ -33,6 +34,16 @@ $border-radius: 5px;
   &:hover {
     background-color: $red-light;
   }
+}
+
+@mixin input {
+  width: 100%;
+  height: 30px;
+  padding-left: 10px;
+  border: 1px solid $gray;
+  border-radius: $border-radius;
+  outline: none;
+  font-size: 1.1rem;
 }
 
 body {
@@ -84,6 +95,18 @@ body {
       text-decoration-color: $red;
       text-underline-offset: 5px;
     }
+  }
+
+  .errorMsg {
+    margin-bottom: 20px;
+    color: #e60000;
+    font-size: 1.2rem;
+  }
+
+  .successMsg {
+    margin-bottom: 20px;
+    color: #04d219;
+    font-size: 1.2rem;
   }
 
   @media screen and (min-width: 700px) {
