--- a/src/sass/includes/_base.scss
+++ b/src/sass/includes/_base.scss
@@ -97,6 +97,42 @@ body {
     }
   }
 
+  .admin-section {
+    width: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 40px 12px;
+
+    .admin-title {
+      margin: 0 auto 40px;
+      font-size: 1.8rem;
+      font-weight: 700;
+    }
+
+    .modify-btn,
+    .delete-btn {
+      font-size: 1.4rem;
+      padding: 5px 10px;
+      background-color: transparent;
+      border-radius: 5px;
+    }
+
+    .modify-btn {
+      border: 2px solid #0390d2;
+      i {
+        color: #0390d2;
+      }
+    }
+
+    .delete-btn {
+      border: 2px solid $red;
+      i {
+        color: $red;
+      }
+    }
+  }
+
   .errorMsg {
     margin-bottom: 20px;
     color: #e60000;
@@ -107,6 +143,42 @@ body {
     margin-bottom: 20px;
     color: #04d219;
     font-size: 1.2rem;
+  }
+
+  //-------- MODALS --------
+  .modal {
+    position: fixed;
+    z-index: 90;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: none;
+
+    .modal-content {
+      width: 90%;
+      margin: 20% auto;
+      padding: 20px;
+      border: 1px solid $light;
+      border-radius: $border-radius;
+      background-color: $white;
+
+      .modal-header {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 40px;
+
+        .close-modal {
+          font-size: 1.8rem;
+          cursor: pointer;
+        }
+      }
+    }
+  }
+  .modal.active {
+    display: block;
   }
 
   @media screen and (min-width: 700px) {
