--- a/src/sass/includes/_navbar.scss
+++ b/src/sass/includes/_navbar.scss
@@ -15,6 +15,11 @@
     height: auto;
   }
 
+  span {
+    font-size: 1.1rem;
+    font-weight: 600;
+  }
+
   .burger-btn {
     font-size: 32px;
     color: $gray;
