--- a/src/style.css
+++ b/src/style.css
@@ -55,6 +55,37 @@ body .content h2 {
   text-decoration-color: #d92332;
   text-underline-offset: 5px;
 }
+body .admin-section {
+  width: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  padding: 40px 12px;
+}
+body .admin-section .admin-title {
+  margin: 0 auto 40px;
+  font-size: 1.8rem;
+  font-weight: 700;
+}
+body .admin-section .modify-btn,
+body .admin-section .delete-btn {
+  font-size: 1.4rem;
+  padding: 5px 10px;
+  background-color: transparent;
+  border-radius: 5px;
+}
+body .admin-section .modify-btn {
+  border: 2px solid #0390d2;
+}
+body .admin-section .modify-btn i {
+  color: #0390d2;
+}
+body .admin-section .delete-btn {
+  border: 2px solid #d92332;
+}
+body .admin-section .delete-btn i {
+  color: #d92332;
+}
 body .errorMsg {
   margin-bottom: 20px;
   color: #e60000;
@@ -64,6 +95,37 @@ body .successMsg {
   margin-bottom: 20px;
   color: #04d219;
   font-size: 1.2rem;
+}
+body .modal {
+  position: fixed;
+  z-index: 90;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+}
+body .modal .modal-content {
+  width: 90%;
+  margin: 20% auto;
+  padding: 20px;
+  border: 1px solid #ececec;
+  border-radius: 5px;
+  background-color: #ffffff;
+}
+body .modal .modal-content .modal-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 40px;
+}
+body .modal .modal-content .modal-header .close-modal {
+  font-size: 1.8rem;
+  cursor: pointer;
+}
+body .modal.active {
+  display: block;
 }
 @media screen and (min-width: 700px) {
   body .content {
@@ -87,6 +149,10 @@ body .successMsg {
 .nav img {
   width: 90px;
   height: auto;
+}
+.nav span {
+  font-size: 1.1rem;
+  font-weight: 600;
 }
 .nav .burger-btn {
   font-size: 32px;
@@ -499,6 +565,46 @@ footer .footer-items .footer-contact .contact-infos .fas {
   .form-content .form-login {
     padding: 30px 140px;
   }
+}
+
+.employees-management .create-employee {
+  width: fit-content;
+  margin: 0 auto;
+  padding: 12px 15px;
+  border-radius: 5px;
+  border: none;
+  color: #ffffff;
+  background-color: #d92332;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+.employees-management .create-employee:hover {
+  background-color: #d9777f;
+}
+.employees-management .employees-list {
+  margin: 40px 0;
+  border: 3px solid #ececec;
+  border-radius: 5px;
+}
+.employees-management .employees-list .list-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 4px;
+}
+.employees-management .employees-list .list-item:nth-child(2n) {
+  background-color: #ececec;
+}
+.employees-management .employees-list .list-item .employee-infos,
+.employees-management .employees-list .list-item .employee-btns {
+  display: flex;
+  gap: 10px;
+  font-size: 1.1rem;
+  padding: 5px;
+  flex: 1;
+}
+.employees-management .employees-list .list-item .employee-btns {
+  justify-content: end;
 }
 
 /*# sourceMappingURL=style.css.map */
