--- a/src/sass/includes/_base.scss
+++ b/src/sass/includes/_base.scss
@@ -161,18 +161,42 @@ body {
       width: 90%;
       margin: 20% auto;
       padding: 20px;
-      border: 1px solid $light;
       border-radius: $border-radius;
       background-color: $white;
 
       .modal-header {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         margin-bottom: 40px;
 
+        h4 {
+          font-size: 1.2rem;
+        }
+
         .close-modal {
-          font-size: 1.8rem;
+          font-size: 2rem;
           cursor: pointer;
+        }
+      }
+
+      form {
+        display: flex;
+        flex-direction: column;
+
+        label {
+          font-size: 1.1rem;
+          margin-bottom: 5px;
+        }
+
+        input {
+          @include input;
+          margin-bottom: 25px;
+        }
+
+        button {
+          @include button;
+          width: 100%;
         }
       }
     }
@@ -185,6 +209,13 @@ body {
     .content {
       margin: 80px auto;
       width: 800px;
+    }
+
+    .modal {
+      .modal-content {
+        width: 70%;
+        margin: 10% auto;
+      }
     }
   }
 }
