Delete employee action added

--- a/src/sass/includes/_employees-mngt.scss
+++ b/src/sass/includes/_employees-mngt.scss
@@ -41,6 +41,9 @@
       width: 80%;
       margin: 40px auto;
       .list-item {
+        .employee-infos {
+          gap: 12px;
+        }
         .employee-btns {
           display: flex;
           gap: 20px;
