--- a/src/sass/includes/_base.scss
+++ b/src/sass/includes/_base.scss
@@ -69,11 +69,12 @@ body {
 
   a {
     color: inherit;
+    text-decoration: none;
   }
 
   section {
     width: 100%;
-    margin: 0;
+    margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -81,19 +82,22 @@ body {
     &:nth-child(2n + 1) {
       background-color: $bg-color;
     }
-  }
 
-  .content {
-    margin: 60px 25px;
+    .content {
+      margin: 60px 25px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
-    h2 {
-      margin-bottom: 55px;
-      font-size: 1.6rem;
-      text-align: center;
-      letter-spacing: 0.5px;
-      text-decoration-line: underline;
-      text-decoration-color: $red;
-      text-underline-offset: 5px;
+      h2 {
+        margin-bottom: 55px;
+        font-size: 1.6rem;
+        text-align: center;
+        letter-spacing: 0.5px;
+        text-decoration-line: underline;
+        text-decoration-color: $red;
+        text-underline-offset: 5px;
+      }
     }
   }
 
