--- a/src/style.css
+++ b/src/style.css
@@ -32,10 +32,11 @@ body p {
 }
 body a {
   color: inherit;
+  text-decoration: none;
 }
 body section {
   width: 100%;
-  margin: 0;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,10 +44,13 @@ body section {
 body section:nth-child(2n+1) {
   background-color: #fafafa;
 }
-body .content {
+body section .content {
   margin: 60px 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-body .content h2 {
+body section .content h2 {
   margin-bottom: 55px;
   font-size: 1.6rem;
   text-align: center;
@@ -406,6 +410,7 @@ footer .footer-items .footer-contact .contact-infos .fas {
 }
 @media screen and (min-width: 700px) {
   .services .services-content .services-cards {
+    width: 100%;
     flex-direction: row;
     justify-content: space-between;
     gap: inherit;
@@ -661,6 +666,9 @@ footer .footer-items .footer-contact .contact-infos .fas {
   .employees-management .employees-list {
     width: 80%;
     margin: 40px auto;
+  }
+  .employees-management .employees-list .list-item .employee-infos {
+    gap: 12px;
   }
   .employees-management .employees-list .list-item .employee-btns {
     display: flex;
