--- a/src/sass/includes/_base.scss
+++ b/src/sass/includes/_base.scss
@@ -25,7 +25,7 @@ $border-radius: 5px;
   width: fit-content;
   margin: 0 auto;
   padding: 12px 15px;
-  border-radius: 5px;
+  border-radius: $border-radius;
   border: none;
   color: $white;
   background-color: #d92332;
@@ -173,6 +173,14 @@ body {
     }
   }
 
+  .logout-btn {
+    color: $red;
+  }
+
+  .create-btn {
+    @include button;
+  }
+
   .errorMsg {
     margin-bottom: 20px;
     color: #e60000;
@@ -205,50 +213,59 @@ body {
       margin-bottom: 25px;
     }
 
+    textarea {
+      margin-bottom: 25px;
+      padding-left: 10px;
+      border: 1px solid $gray;
+      border-radius: $border-radius;
+      outline: none;
+      font-size: 1.1rem;
+    }
+
     button {
       @include button;
       width: 100%;
     }
   }
 
-  //-------- MODALS --------
-  .modal {
-    position: fixed;
-    z-index: 90;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.4);
-    display: none;
+  .occasions-card {
+    width: 300px;
+    height: auto;
+    border: 1px solid $gray;
+    border-radius: $border-radius;
 
-    .modal-content {
-      width: 90%;
-      margin: 20% auto;
-      padding: 20px;
-      border-radius: $border-radius;
-      background-color: $white;
+    .occasions-img {
+      width: 100%;
+      height: 220px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: $light;
+      border-bottom: 1px solid $gray;
 
-      .modal-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 40px;
-
-        h4 {
-          font-size: 1.2rem;
-        }
-
-        .close-modal {
-          font-size: 2rem;
-          cursor: pointer;
-        }
+      img {
+        max-width: 100%;
       }
     }
-  }
-  .modal.active {
-    display: block;
+
+    .occasions-infos {
+      padding: 20px 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+
+      .occasions-title {
+        font-size: 1.3rem;
+        font-weight: 700;
+        text-transform: uppercase;
+      }
+
+      .occasions-specs {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+    }
   }
 
   @media screen and (min-width: 700px) {
