--- a/src/sass/includes/_occasions.scss
+++ b/src/sass/includes/_occasions.scss
@@ -11,3 +11,19 @@
     }
   }
 }
+
+.occasions-management {
+  .occasions-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 60px;
+    margin: 60px 0;
+
+    .occasions-btns {
+      display: flex;
+      justify-content: space-around;
+      padding: 20px 10px;
+    }
+  }
+}
