--- a/src/sass/includes/_occasions.scss
+++ b/src/sass/includes/_occasions.scss
@@ -18,12 +18,110 @@
     flex-direction: column;
     align-items: center;
     gap: 60px;
-    margin: 60px 0;
+    margin: 60px auto;
 
-    .occasions-btns {
+    .occasions-card {
+      width: 300px;
+      height: auto;
+      border: 1px solid $gray;
+      border-radius: $border-radius;
+
+      .occasions-img {
+        width: 100%;
+        height: 220px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: $light;
+        border-bottom: 1px solid $gray;
+
+        img {
+          max-width: 100%;
+        }
+      }
+
+      .occasions-infos {
+        padding: 20px 10px;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+
+        .occasions-title {
+          font-size: 1.3rem;
+          font-weight: 700;
+          text-transform: uppercase;
+        }
+
+        .occasions-specs {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+        }
+      }
+
+      .occasions-btns {
+        display: flex;
+        justify-content: space-around;
+        padding: 20px 10px;
+      }
+    }
+  }
+}
+
+.occasions-details {
+  .occasion-infos {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    .occasion-img {
+      width: 340px;
+      height: auto;
+      margin: 0 auto;
+
+      img {
+        max-width: 100%;
+        border-radius: $border-radius;
+      }
+    }
+    h3 {
+      font-family: "Nunito", sans-serif, "arial", sans-serif;
+    }
+    .occasion-infos-numbers {
       display: flex;
-      justify-content: space-around;
-      padding: 20px 10px;
+      justify-content: space-between;
+    }
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .occasions-management {
+    .occasions-list {
+      flex-direction: row;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 25px;
+
+      .occasions-card {
+        width: 240px;
+        cursor: pointer;
+        transition: transform 0.5s;
+
+        .occasions-img {
+          width: 100%;
+          height: 180px;
+        }
+
+        .occasions-btns {
+          a {
+            font-size: 1.1rem;
+          }
+        }
+      }
+
+      .occasions-card:hover {
+        transform: scale(1.04);
+      }
     }
   }
 }
