--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,7 +10,8 @@
 @import "./includes/reviews";
 @import "./includes/contact";
 
-/* Other pages */
+/* Admin pages */
 @import "./includes/login";
 @import "./includes/employees-mngt";
+@import "./includes/services-mngt";
 @import "./includes/edit-hours";
