--- a/src/style.css
+++ b/src/style.css
@@ -191,40 +191,6 @@ body form button {
 body form button:hover {
   background-color: #d9777f;
 }
-body .occasions-card {
-  width: 300px;
-  height: auto;
-  border: 1px solid #454545;
-  border-radius: 5px;
-}
-body .occasions-card .occasions-img {
-  width: 100%;
-  height: 220px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #ececec;
-  border-bottom: 1px solid #454545;
-}
-body .occasions-card .occasions-img img {
-  max-width: 100%;
-}
-body .occasions-card .occasions-infos {
-  padding: 20px 10px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-body .occasions-card .occasions-infos .occasions-title {
-  font-size: 1.3rem;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-body .occasions-card .occasions-infos .occasions-specs {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
 @media screen and (min-width: 700px) {
   body .content {
     margin: 80px auto;
@@ -252,10 +218,6 @@ body .occasions-card .occasions-infos .occasions-specs {
   body .admin-section .return-btn:hover {
     background-color: #454545;
     color: #ffffff;
-  }
-  body .modal .modal-content {
-    width: 70%;
-    margin: 10% auto;
   }
 }
 
@@ -341,7 +303,7 @@ body .occasions-card .occasions-infos .occasions-specs {
 footer {
   background-color: #454545;
   color: #ffffff;
-  padding: 30px 20px;
+  padding: 30px 50px;
 }
 footer .footer-items {
   display: flex;
@@ -470,16 +432,32 @@ footer .footer-items .footer-contact .contact-infos .fas {
   align-items: center;
   gap: 50px;
 }
-.services .services-content .services-cards .services-card {
-  width: 240px;
-  height: 230px;
+.services .services-content .services-cards .service-card {
+  width: 260px;
+  height: 250px;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: 1.6rem;
-  font-weight: 700;
+  padding: 15px 10px;
   border-radius: 5px;
   border: 2px solid #454545;
+  gap: 10px;
+}
+.services .services-content .services-cards .service-card .service-card-title {
+  font-size: 1.6rem;
+  font-weight: 700;
+}
+.services .services-content .services-cards .service-card hr {
+  overflow: visible;
+  width: 50%;
+  background-color: #454545;
+  height: 1px;
+  border: none;
+}
+.services .services-content .services-cards .service-card .service-card-description {
+  font-weight: 300;
+  font-size: 1rem;
+  text-align: justify;
 }
 @media screen and (min-width: 700px) {
   .services .services-content .services-cards {
@@ -487,6 +465,32 @@ footer .footer-items .footer-contact .contact-infos .fas {
     flex-direction: row;
     justify-content: space-between;
     gap: inherit;
+  }
+  .services .services-content .services-cards .service-card {
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    width: 240px;
+    height: 230px;
+  }
+  .services .services-content .services-cards .service-card hr {
+    display: none;
+  }
+  .services .services-content .services-cards .service-card .service-card-description {
+    position: absolute;
+    width: 240px;
+    height: 230px;
+    font-weight: 300;
+    text-align: justify;
+    color: #ffffff;
+    padding: 15px;
+    border-radius: 5px;
+    background-color: black;
+    opacity: 0.8;
+    display: none;
+  }
+  .services .services-content .services-cards .service-card:hover .service-card-description {
+    display: block;
   }
 }
 
@@ -518,14 +522,93 @@ footer .footer-items .footer-contact .contact-infos .fas {
   flex-direction: column;
   align-items: center;
   gap: 60px;
-  margin: 60px 0;
+  margin: 60px auto;
 }
-.occasions-management .occasions-list .occasions-btns {
+.occasions-management .occasions-list .occasions-card {
+  width: 300px;
+  height: auto;
+  border: 1px solid #454545;
+  border-radius: 5px;
+}
+.occasions-management .occasions-list .occasions-card .occasions-img {
+  width: 100%;
+  height: 220px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ececec;
+  border-bottom: 1px solid #454545;
+}
+.occasions-management .occasions-list .occasions-card .occasions-img img {
+  max-width: 100%;
+}
+.occasions-management .occasions-list .occasions-card .occasions-infos {
+  padding: 20px 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.occasions-management .occasions-list .occasions-card .occasions-infos .occasions-title {
+  font-size: 1.3rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.occasions-management .occasions-list .occasions-card .occasions-infos .occasions-specs {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.occasions-management .occasions-list .occasions-card .occasions-btns {
   display: flex;
   justify-content: space-around;
   padding: 20px 10px;
 }
 
+.occasions-details .occasion-infos {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.occasions-details .occasion-infos .occasion-img {
+  width: 340px;
+  height: auto;
+  margin: 0 auto;
+}
+.occasions-details .occasion-infos .occasion-img img {
+  max-width: 100%;
+  border-radius: 5px;
+}
+.occasions-details .occasion-infos h3 {
+  font-family: "Nunito", sans-serif, "arial", sans-serif;
+}
+.occasions-details .occasion-infos .occasion-infos-numbers {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 700px) {
+  .occasions-management .occasions-list {
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 25px;
+  }
+  .occasions-management .occasions-list .occasions-card {
+    width: 240px;
+    cursor: pointer;
+    transition: transform 0.5s;
+  }
+  .occasions-management .occasions-list .occasions-card .occasions-img {
+    width: 100%;
+    height: 180px;
+  }
+  .occasions-management .occasions-list .occasions-card .occasions-btns a {
+    font-size: 1.1rem;
+  }
+  .occasions-management .occasions-list .occasions-card:hover {
+    transform: scale(1.04);
+  }
+}
 .reviews .reviews-content .reviews-cards {
   display: flex;
   align-items: center;
@@ -632,7 +715,7 @@ footer .footer-items .footer-contact .contact-infos .fas {
   }
 }
 
-/* Other pages */
+/* Admin pages */
 .form-content {
   width: 100%;
   height: 100vh;
@@ -743,6 +826,52 @@ footer .footer-items .footer-contact .contact-infos .fas {
     gap: 12px;
   }
   .employees-management .employees-list .list-item .employee-btns {
+    display: flex;
+    gap: 20px;
+  }
+}
+
+.services-management .services-list {
+  margin: 40px 0;
+  border: 2px solid #ececec;
+  border-radius: 5px;
+}
+.services-management .services-list .list-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 4px;
+}
+.services-management .services-list .list-item:nth-child(2n) {
+  background-color: #ececec;
+}
+.services-management .services-list .list-item .service-infos,
+.services-management .services-list .list-item .service-btns {
+  display: flex;
+  gap: 8px;
+  font-size: 1.1rem;
+  padding: 5px;
+  flex: 1;
+}
+.services-management .services-list .list-item .service-title {
+  font-weight: 600;
+  font-size: 1.4rem;
+}
+.services-management .services-list .list-item .service-btns {
+  justify-content: end;
+}
+.services-management .services-list .list-item .service-btns button {
+  cursor: pointer;
+}
+@media screen and (min-width: 700px) {
+  .services-management .services-list {
+    width: 100%;
+    margin: 40px auto;
+  }
+  .services-management .services-list .list-item .service-infos {
+    gap: 12px;
+  }
+  .services-management .services-list .list-item .service-btns {
     display: flex;
     gap: 20px;
   }
