--- a/src/sass/includes/_base.scss
+++ b/src/sass/includes/_base.scss
@@ -101,6 +101,16 @@ body {
     }
   }
 
+  .page-title {
+    margin-bottom: 30px;
+    font-size: 1.6rem;
+    text-align: center;
+    letter-spacing: 0.5px;
+    text-decoration-line: underline;
+    text-decoration-color: $red;
+    text-underline-offset: 5px;
+  }
+
   .admin-section {
     width: 100%;
     margin: 0;
