Contact card designed

--- a/src/sass/includes/_contact.scss
+++ b/src/sass/includes/_contact.scss
@@ -1,20 +1,22 @@
 .contact {
   .contact-content {
+    width: 100%;
     .contact-card {
+      width: 100%;
       display: flex;
       flex-direction: column;
-      border: 3px solid $bg-color;
+      border: 1px solid $light;
       border-radius: $border-radius;
 
       .contact-infos {
         width: 100%;
-        padding: 10px;
         display: flex;
         flex-direction: column;
         align-items: center;
         background-color: $white;
         padding: 30px 10px;
         gap: 30px;
+        border-radius: $border-radius;
 
         .logo {
           width: 10rem;
@@ -50,25 +52,45 @@
 
       .contact-form {
         background-color: $bg-color;
-        padding: 30px 10px;
-
-        .contact-btn {
-          @include button;
-        }
+        padding: 20px 10px;
+        border-radius: $border-radius;
       }
     }
+  }
 
-    @media screen and (min-width: 700px) {
+  @media screen and (min-width: 700px) {
+    .contact-content {
+      width: 800px;
       .contact-card {
         flex-direction: row;
 
         .contact-infos {
           align-items: flex-start;
-          flex: 1;
+          width: 35%;
+          padding: 30px 20px;
+
+          .logo,
+          h3,
+          .socials {
+            margin: 0 auto;
+          }
+
+          .socials {
+            gap: 20px;
+          }
         }
         .contact-form {
-          flex: 2;
-          height: auto;
+          width: 65%;
+          padding: 30px 20px;
+
+          form {
+            width: auto;
+
+            button {
+              width: auto;
+              margin-right: 0;
+            }
+          }
         }
       }
     }
