--- a/src/style.css
+++ b/src/style.css
@@ -289,6 +289,9 @@ body form button:hover {
   .nav img {
     width: 140px;
   }
+  .nav span {
+    cursor: pointer;
+  }
   .nav .fa-bars {
     display: none;
   }
