--- a/src/sass/includes/_base.scss
+++ b/src/sass/includes/_base.scss
@@ -124,6 +124,11 @@ body {
       font-weight: 700;
     }
 
+    .admin-text {
+      text-align: center;
+      font-size: 1.1rem;
+    }
+
     .modify-btn,
     .delete-btn,
     .return-btn {
