--- a/src/style.css
+++ b/src/style.css
@@ -533,6 +533,40 @@ footer .footer-items .footer-contact .contact-infos .fas {
   background-color: #d9777f;
 }
 
+.occasions-management .filter-section {
+  border-bottom: 1px solid #ececec;
+  border-top: 1px solid #ececec;
+}
+.occasions-management .filter-section .filter-content {
+  width: 100%;
+  margin: 20px auto;
+}
+.occasions-management .filter-section .filter-content .filters .filter {
+  display: flex;
+  justify-content: space-between;
+}
+.occasions-management .filter-section .filter-content .filters .filter label {
+  width: 120px;
+}
+.occasions-management .filter-section .filter-content .filters .filter input {
+  width: 60px;
+}
+.occasions-management .filter-section .filter-btn {
+  width: fit-content;
+  margin: 0 auto;
+  padding: 12px 15px;
+  border-radius: 5px;
+  border: none;
+  color: #ffffff;
+  background-color: #d92332;
+  font-size: 1.1rem;
+  cursor: pointer;
+  margin-top: 20px;
+  margin-right: 0;
+}
+.occasions-management .filter-section .filter-btn:hover {
+  background-color: #d9777f;
+}
 .occasions-management .occasions-list {
   display: flex;
   flex-direction: column;
@@ -554,6 +588,7 @@ footer .footer-items .footer-contact .contact-infos .fas {
   justify-content: center;
   background-color: #ececec;
   border-bottom: 1px solid #454545;
+  border-radius: 5px;
 }
 .occasions-management .occasions-list .occasions-card .occasions-img img {
   max-width: 100%;
@@ -603,6 +638,20 @@ footer .footer-items .footer-contact .contact-infos .fas {
 }
 
 @media screen and (min-width: 700px) {
+  .occasions-management .filter-section {
+    margin-top: 40px;
+  }
+  .occasions-management .filter-section .filter-content .filters {
+    display: flex;
+    justify-content: space-between;
+  }
+  .occasions-management .filter-section .filter-content .filters .filter label {
+    width: fit-content;
+    margin-right: 10px;
+  }
+  .occasions-management .filter-section .filter-content .filters .filter span {
+    margin: 0 10px;
+  }
   .occasions-management .occasions-list {
     flex-direction: row;
     align-items: center;
